# kolbe

./: .gitignore  Kolbe v1.0.1.spec  Kolbe v1.0.2.spec  Kolbe_v1.0.2.spec  Kolbe_v1.0.3.spec  README.md  build_mac.sh  build_win.ps1  pyproject.toml  requirements.txt
packaging/: kolbe_mac.spec  kolbe_win.spec  mac_launcher.py
packaging/rthooks/: pyi_rth_hidapi_path.py
scripts/: find_hidapi_dll.py
src/kolbe/: __init__.py  __main__.py  cli.py  crash_report.py  hidapi_bootstrap.py  paths.py  sdl_bootstrap.py
src/kolbe/controller/: __init__.py  axis_utils.py  detector.py  ds4_hid.py  dualsense_backend.py  dualshock4_backend.py  hid_lifecycle.py  manager.py  multi_manager.py  ps_led.py  ps_sensor_companion.py  pygame_backend.py  slots.py  touchpad_smoother.py  types.py
src/kolbe/gui/: __init__.py  app.py  controller_slots_panel.py  controller_thread.py  main_window.py  mapping_inspector.py  scroll_guard.py  styles.py  system_monitor.py  top_bar.py  visualizer_widget.py
src/kolbe/mapping/: __init__.py  digital_repeat_runner.py  engine.py  macro_runner.py  models.py  output_timing.py  preset_manager.py  transforms.py
src/kolbe/midi/: __init__.py  virtual_port.py
src/kolbe/utils/: project_cleanup.py
